# TradingView_Project

./: .gitignore  README.md  app.py  model_training.py  nvidia_hist2.csv  pyproject.toml  requirements.txt  tradingView.db  tradingView_Project.ipynb  tradingView_Project.py
data/: SandP500_hist.csv  US10Bonds_hist.csv  fed_hist.csv  gold_hist.csv  nvidia_hist.csv  sp500_hist.csv  us10_hist.csv
database/: taba.db  tradingView.db
models/: best_model.keras
taba/: config.py  db_handler.py  model.py  sp500_analaysis.ipynb  utils.py
